# ai-code-detector-cs5480

./: .gitignore  README.md  main.py  pyproject.toml
reports/: results_baseline.md
reports/metrics/: baseline_error_summary.json  baseline_errors.csv  baseline_test.json
scripts/: ablation_input_format.py  ablation_max_length.py  analyze_dataset.py  error_analysis.py  evaluate.py  hyperparameter_search.py  prepare_dataset.py  show_results.py  tokenize_dataset.py  train.py
src/ai_code_detector/: __init__.py  config.py  logging_utils.py
src/ai_code_detector/cli/: __init__.py  classify.py
src/ai_code_detector/data/: __init__.py  filtering.py  loading.py  splitting.py  torch_dataset.py
src/ai_code_detector/evaluation/: __init__.py  plots.py  predict.py
src/ai_code_detector/features/: __init__.py  code_normalization.py  tokenization.py
src/ai_code_detector/models/: __init__.py  classifier.py
src/ai_code_detector/training/: __init__.py  checkpoint.py  loop.py  metrics.py
